--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,13 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="green">#478103</color>
+    <color name="blue">#2196F3</color>
+    <color name="light_blue">#EAF1F6</color>
+    <color name="darker_black">#202020</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="background">#F6F2F2</color>
+    <color name="card_background">#F3FAFF</color>
+    <color name="card_foreground">#600B0B0B</color>
+    <color name="light_gray">#DADADA</color>
 </resources>
