--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -5,152 +5,171 @@
     android:background="@color/background"
     tools:context=".view.DashboardActivity">
 
-    <com.google.android.material.card.MaterialCardView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/_10sdp"
-        android:layout_marginTop="@dimen/_50sdp"
-        app:cardBackgroundColor="@color/card_background"
-        app:cardCornerRadius="@dimen/_10sdp"
-        app:cardElevation="@dimen/_10sdp">
+        android:layout_height="match_parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <ProgressBar
+            android:id="@+id/progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminateTint="@color/green"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/data_card"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingBottom="@dimen/_10sdp">
+            android:layout_margin="@dimen/_15sdp"
+            app:cardBackgroundColor="@color/card_background"
+            app:cardCornerRadius="@dimen/_10sdp"
+            app:cardElevation="@dimen/_10sdp">
 
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/image"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_130sdp"
-                android:foreground="@color/card_foreground"
-                android:scaleType="centerCrop"
-                android:src="@drawable/pizza"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:layout_height="match_parent"
+                android:paddingBottom="@dimen/_10sdp">
 
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/veg_icon"
-                android:layout_width="@dimen/_16sdp"
-                android:layout_height="@dimen/_16sdp"
-                android:layout_margin="@dimen/_15sdp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/non_veg"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:id="@+id/image"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_130sdp"
+                    android:foreground="@color/card_foreground"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/pizza"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_15sdp"
-                android:textColor="@color/white"
-                android:textSize="@dimen/_18sdp"
-                app:fontFamily="@font/red_hat_bold"
-                app:layout_constraintBottom_toBottomOf="@id/image"
-                app:layout_constraintStart_toStartOf="@id/image"
-                tools:text="₹ 449" />
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:id="@+id/veg_icon"
+                    android:layout_width="@dimen/_16sdp"
+                    android:layout_height="@dimen/_16sdp"
+                    android:layout_margin="@dimen/_15sdp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/non_veg"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_8sdp"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_15sdp"
-                app:fontFamily="@font/red_hat_bold"
-                app:layout_constraintStart_toStartOf="@id/image"
-                app:layout_constraintTop_toBottomOf="@id/image"
-                tools:text="Non-Veg Pizza" />
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/_15sdp"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_18sdp"
+                    app:fontFamily="@font/red_hat_bold"
+                    app:layout_constraintBottom_toBottomOf="@id/image"
+                    app:layout_constraintStart_toStartOf="@id/image"
+                    tools:text="₹ 449" />
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/description"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_8sdp"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_11sdp"
-                app:fontFamily="@font/red_hat_display_smi_regular"
-                app:layout_constraintStart_toStartOf="@id/image"
-                app:layout_constraintTop_toBottomOf="@id/name"
-                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." />
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_15sdp"
+                    app:fontFamily="@font/red_hat_bold"
+                    app:layout_constraintStart_toStartOf="@id/image"
+                    app:layout_constraintTop_toBottomOf="@id/image"
+                    tools:text="Non-Veg Pizza" />
 
-            <View
-                android:id="@+id/divider"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_1sdp"
-                android:layout_marginTop="@dimen/_8sdp"
-                android:background="@color/light_gray"
-                app:layout_constraintTop_toBottomOf="@id/description" />
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_11sdp"
+                    app:fontFamily="@font/red_hat_display_smi_regular"
+                    app:layout_constraintStart_toStartOf="@id/image"
+                    app:layout_constraintTop_toBottomOf="@id/name"
+                    tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." />
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/select_crust"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_8sdp"
-                android:text="@string/select_crust"
-                android:textColor="@color/darker_black"
-                android:textSize="@dimen/_11sdp"
-                app:fontFamily="@font/red_hat_bold"
-                app:layout_constraintStart_toStartOf="@id/image"
-                app:layout_constraintTop_toBottomOf="@id/divider" />
+                <View
+                    android:id="@+id/divider"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_1sdp"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:background="@color/light_gray"
+                    app:layout_constraintTop_toBottomOf="@id/description" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler_select_crust"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_6sdp"
-                android:orientation="horizontal"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/select_crust"
-                tools:itemCount="3"
-                tools:listitem="@layout/item_select_size" />
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/select_crust"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:text="@string/select_crust"
+                    android:textColor="@color/darker_black"
+                    android:textSize="@dimen/_11sdp"
+                    app:fontFamily="@font/red_hat_bold"
+                    app:layout_constraintStart_toStartOf="@id/image"
+                    app:layout_constraintTop_toBottomOf="@id/divider" />
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/select_size"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_8sdp"
-                android:text="@string/select_size"
-                android:textColor="@color/darker_black"
-                android:textSize="@dimen/_11sdp"
-                app:fontFamily="@font/red_hat_bold"
-                app:layout_constraintStart_toStartOf="@id/image"
-                app:layout_constraintTop_toBottomOf="@id/recycler_select_crust" />
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recycler_select_crust"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:layout_marginTop="@dimen/_6sdp"
+                    android:orientation="horizontal"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/select_crust"
+                    tools:itemCount="3"
+                    tools:listitem="@layout/item_select_size" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler_select_size"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_6sdp"
-                android:orientation="horizontal"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/select_size"
-                tools:itemCount="3"
-                tools:listitem="@layout/item_select_size" />
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/select_size"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:text="@string/select_size"
+                    android:textColor="@color/darker_black"
+                    android:textSize="@dimen/_11sdp"
+                    app:fontFamily="@font/red_hat_bold"
+                    app:layout_constraintStart_toStartOf="@id/image"
+                    app:layout_constraintTop_toBottomOf="@id/recycler_select_crust" />
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_add_cart"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_15sdp"
-                android:backgroundTint="@color/blue"
-                android:paddingHorizontal="@dimen/_20sdp"
-                android:paddingVertical="@dimen/_10sdp"
-                android:text="@string/add_cart"
-                app:cornerRadius="@dimen/_15sdp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/recycler_select_size" />
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recycler_select_size"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:layout_marginTop="@dimen/_6sdp"
+                    android:orientation="horizontal"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/select_size"
+                    tools:itemCount="3"
+                    tools:listitem="@layout/item_select_size" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_add_cart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_15sdp"
+                    android:backgroundTint="@color/blue"
+                    android:paddingHorizontal="@dimen/_20sdp"
+                    android:paddingVertical="@dimen/_10sdp"
+                    android:text="@string/add_cart"
+                    app:cornerRadius="@dimen/_15sdp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/recycler_select_size" />
 
-    </com.google.android.material.card.MaterialCardView>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </com.google.android.material.card.MaterialCardView>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
