--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -23,11 +23,12 @@
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/data_card"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="@dimen/_15sdp"
             app:cardBackgroundColor="@color/card_background"
             app:cardCornerRadius="@dimen/_10sdp"
-            app:cardElevation="@dimen/_10sdp">
+            app:cardElevation="@dimen/_10sdp"
+            app:layout_constraintTop_toTopOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -99,58 +100,6 @@
                     android:background="@color/light_gray"
                     app:layout_constraintTop_toBottomOf="@id/description" />
 
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/select_crust"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_10sdp"
-                    android:layout_marginTop="@dimen/_8sdp"
-                    android:text="@string/select_crust"
-                    android:textColor="@color/darker_black"
-                    android:textSize="@dimen/_11sdp"
-                    app:fontFamily="@font/red_hat_bold"
-                    app:layout_constraintStart_toStartOf="@id/image"
-                    app:layout_constraintTop_toBottomOf="@id/divider" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recycler_select_crust"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_10sdp"
-                    android:layout_marginTop="@dimen/_6sdp"
-                    android:orientation="horizontal"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/select_crust"
-                    tools:itemCount="3"
-                    tools:listitem="@layout/item_select_size" />
-
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/select_size"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_10sdp"
-                    android:layout_marginTop="@dimen/_8sdp"
-                    android:text="@string/select_size"
-                    android:textColor="@color/darker_black"
-                    android:textSize="@dimen/_11sdp"
-                    app:fontFamily="@font/red_hat_bold"
-                    app:layout_constraintStart_toStartOf="@id/image"
-                    app:layout_constraintTop_toBottomOf="@id/recycler_select_crust" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recycler_select_size"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_10sdp"
-                    android:layout_marginTop="@dimen/_6sdp"
-                    android:orientation="horizontal"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/select_size"
-                    tools:itemCount="3"
-                    tools:listitem="@layout/item_select_size" />
-
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/btn_add_cart"
                     android:layout_width="wrap_content"
@@ -163,7 +112,7 @@
                     app:cornerRadius="@dimen/_15sdp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/recycler_select_size" />
+                    app:layout_constraintTop_toBottomOf="@id/divider" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
