calculate total cart value

--- a/app/src/main/res/layout/activity_cart_items.xml
+++ b/app/src/main/res/layout/activity_cart_items.xml
@@ -23,10 +23,26 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycle_cart_items"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/_50sdp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:listitem="@layout/item_cart" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/total_order_value"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/_16sdp"
+            android:textColor="@color/green"
+            android:textStyle="bold"
+            android:background="@color/light_blue"
+            android:padding="@dimen/_15sdp"
+            tools:text="Total Order Amount - 2000"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
